--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "validator": "^6.2.0"
+    "validator": "^6.2.0",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
