--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux-logger": "^3.0.6",
+    "redux-multi": "^0.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
