--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "<h1>Gunnesgard Version 2</h1>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:client": "webpack --config ./webpack.config.js/",
+    "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
+    "build:prod": "webpack --config ./webpack.config.prod.js/",
+    "start:dev:client": "webpack-dev-server --env development --open",
+    "debug server": "node --nolazy --inspect-brk=9229 server.js",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -23,6 +28,31 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
-    "mongoose": "^4.13.7"
+    "mongoose": "^4.13.7",
+    "path": "^0.12.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-multi": "^0.1.12"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
+    "nodemon": "^1.14.3",
+    "parallelshell": "^3.0.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "write-file-webpack-plugin": "^4.2.0"
   }
 }
