--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}"
-        }
+      {
+        "name" : "Debug server",
+        "type": "node",
+        "request": "launch",
+        "runtimeExecutable": "nodemon",
+        "program": "${workspaceRoot}/server.js",
+        "restart": true,
+        "console": "integratedTerminal",
+      }
     ]
 }
