--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/magnusfahlin/gunnesgard_se_v2#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
