--- a/client/package.json
+++ b/client/package.json
@@ -16,5 +16,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "expect": "^22.0.3",
+    "sinon": "^4.1.3"
   }
 }
