--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "webpack --config ./webpack.config.prod.js/",
     "start:dev:client": "webpack-dev-server --env development --open",
     "debug server": "node --nolazy --inspect-brk=9229 server.js",
-    "test": "jest --watch"
+    "test": "node node_modules/jest-cli/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -41,11 +41,18 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-jest": "^22.0.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
+    "expect": "^22.0.3",
+    "jest": "^22.0.4",
+    "jest-cli": "^22.0.4",
+    "jest-css-modules": "^1.1.0",
+    "sinon": "^4.1.3",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
@@ -54,5 +61,24 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "write-file-webpack-plugin": "^4.2.0"
+   },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.(css|scss|less)$": "jest-css-modules"
+    },
+    "globals": {
+      "NODE_ENV": "test"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src/frontend",
+      "src/shared"
+    ]
   }
 }
