--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,6 @@
 language: node_js
-
 node_js:
-  - 7
-  - 6
-  - 5
-
-script:
-  - npm run build:prod
-  - npm run test
+ - "node"
 
 notifications:
   email:
