--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "build:client": "webpack --config ./webpack.config.js/",
     "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
-    "build:prod": "webpack --config ./webpack.config.prod.js/",
+    "build:prod": "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
     "start:dev:client": "webpack-dev-server --env development --open",
     "debug server": "node --nolazy --inspect-brk=9229 server.js",
-    "test": "node node_modules/jest-cli/bin/jest.js"
+    "test": "node node_modules/jest-cli/bin/jest.js",
+    "heroku-prebuild": "npm run install -dev",
+    "postinstall": "npm run build:prod"
   },
   "repository": {
     "type": "git",
@@ -34,14 +36,16 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-multi": "^0.1.12"
+    "redux-multi": "^0.1.12",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-jest": "^22.0.4",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -49,19 +53,20 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
     "expect": "^22.0.3",
-    "jest": "^22.0.4",
-    "jest-cli": "^22.0.4",
-    "jest-css-modules": "^1.1.0",
-    "sinon": "^4.1.3",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
+    "jest": "^22.0.4",
+    "jest-cli": "^22.0.4",
+    "jest-css-modules": "^1.1.0",
     "nodemon": "^1.14.3",
     "parallelshell": "^3.0.2",
+    "sinon": "^4.1.3",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "write-file-webpack-plugin": "^4.2.0"
-   },
+  },
   "jest": {
     "verbose": true,
     "transform": {
