--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: node_js
 node_js:
  - "node"
 
+services:
+  - mongodb
+
+script:
+ - npm run test
+ - npm run test:integration
+
 notifications:
   email:
     on_failure: change
@@ -11,6 +18,8 @@ cache:
     - node_modules
 
 deploy:
+  on:
+    branch: master
   provider: heroku
   app: gunnesgard
   api_key:
