--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "scripts": {
     "build:client": "webpack --config ./webpack.config.js/",
     "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
-    "build:prod": "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
+    "build:prod":
+      "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
     "start:dev:client": "webpack-dev-server --env development --open",
     "debug server": "node --nolazy --inspect-brk=9229 server.js",
-    "test": "node node_modules/jest-cli/bin/jest.js",
+    "test": "node node_modules/jest-cli/bin/jest.js client/",
+    "test:integration": "better-npm-run test:integration",
     "heroku-prebuild": "npm run install -dev",
     "postinstall": "npm run build:prod"
+  },
+  "betterScripts": {
+    "test:integration": {
+      "command": "node node_modules/mocha/bin/mocha ",
+      "env": { "NODE_ENV": "test" }
+    }
   },
   "repository": {
     "type": "git",
@@ -25,6 +33,7 @@
   },
   "homepage": "https://github.com/magnusfahlin/gunnesgard_se_v2#readme",
   "dependencies": {
+    "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
@@ -50,6 +59,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
     "expect": "^22.0.3",
@@ -59,10 +69,12 @@
     "jest": "^22.0.4",
     "jest-cli": "^22.0.4",
     "jest-css-modules": "^1.1.0",
+    "mocha": "^4.1.0",
     "nodemon": "^1.14.3",
     "parallelshell": "^3.0.2",
     "sinon": "^4.1.3",
     "style-loader": "^0.19.1",
+    "supertest": "^3.0.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "write-file-webpack-plugin": "^4.2.0"
@@ -76,14 +88,7 @@
     "globals": {
       "NODE_ENV": "test"
     },
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src/frontend",
-      "src/shared"
-    ]
+    "moduleFileExtensions": ["js", "jsx"],
+    "moduleDirectories": ["node_modules", "src/frontend", "src/shared"]
   }
 }
