--- a/migration_tool/.vscode/launch.json
+++ b/migration_tool/.vscode/launch.json
@@ -4,12 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
+            "name": "Debug",
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceRoot}\\index.js"
-        }
+            "runtimeExecutable": "nodemon",
+            "program": "${workspaceRoot}/index.js",
+            "restart": false,
+            "console": "integratedTerminal",
+          }
     ]
 }
