--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build:client": "webpack --config ./webpack.config.js/",
     "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
-    "build:prod":
-      "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
+    "build:prod": "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
     "start:dev:client": "webpack-dev-server --env development --open",
     "debug server": "node --nolazy --inspect-brk=9229 server.js",
     "test": "node node_modules/jest-cli/bin/jest.js client/",
@@ -18,7 +17,9 @@
   "betterScripts": {
     "test:integration": {
       "command": "node node_modules/mocha/bin/mocha ",
-      "env": { "NODE_ENV": "test" }
+      "env": {
+        "NODE_ENV": "test"
+      }
     }
   },
   "repository": {
@@ -40,6 +41,8 @@
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
+    "mongoose-bcrypt": "^1.5.0",
+    "mongoose-hidden": "^1.5.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -88,7 +91,14 @@
     "globals": {
       "NODE_ENV": "test"
     },
-    "moduleFileExtensions": ["js", "jsx"],
-    "moduleDirectories": ["node_modules", "src/frontend", "src/shared"]
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src/frontend",
+      "src/shared"
+    ]
   }
 }
