--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:integration": {
       "command": "node node_modules/mocha/bin/mocha ",
       "env": {
-        "NODE_ENV": "test"
+        "NODE_ENV": "test",
+        "TEST_TOKEN": "test",
+        "POSTS_SHOWN_NOT_LOGGED_IN" : "1"
       }
     }
   },
@@ -34,15 +36,16 @@
   },
   "homepage": "https://github.com/magnusfahlin/gunnesgard_se_v2#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "better-npm-run": "^0.1.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
-    "mongoose-bcrypt": "^1.5.0",
-    "mongoose-hidden": "^1.5.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
