--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,6 @@
         "stage-0"
     ],
     "plugins": [
-        "transform-decorators"
-    ]
+        "transform-decorators",
+         ["transform-rename-import", { "original": "^(.+?)\\.css$", "replacement": "$1.scss" }]]
 }
