--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "node node_modules/webpack/bin/webpack.js --config ./webpack.prod.config.js/",
     "start:dev:client": "webpack-dev-server --env development --open",
     "debug server": "node --nolazy --inspect-brk=9229 server.js",
-    "test": "node node_modules/jest-cli/bin/jest.js client/",
+    "test": "node node_modules/jest-cli/bin/jest.js client/ --clearCache",
     "test:integration": "better-npm-run test:integration",
     "heroku-prebuild": "npm run install -dev",
     "postinstall": "npm run build:prod"
@@ -20,7 +20,7 @@
       "env": {
         "NODE_ENV": "test",
         "TEST_TOKEN": "test",
-        "POSTS_SHOWN_NOT_LOGGED_IN" : "1"
+        "POSTS_SHOWN_NOT_LOGGED_IN": "1"
       }
     }
   },
@@ -62,6 +62,7 @@
     "babel-jest": "^22.0.4",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-rename-import": "^2.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -69,6 +70,7 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
     "expect": "^22.0.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
@@ -76,8 +78,10 @@
     "jest-cli": "^22.0.4",
     "jest-css-modules": "^1.1.0",
     "mocha": "^4.1.0",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.14.3",
     "parallelshell": "^3.0.2",
+    "sass-loader": "^6.0.6",
     "sinon": "^4.1.3",
     "style-loader": "^0.19.1",
     "supertest": "^3.0.0",
