--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-mongo-sanitize": "^1.3.2",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
