--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-multi": "^0.1.12"
+    "redux-multi": "^0.1.12",
+    "redux-persist": "^5.5.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
