--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-multi": "^0.1.12",
-    "redux-thunk": "^2.2.0"
+    "redux-persist": "^5.5.0",
+    "redux-thunk": "^2.2.0",
+    "sinon": "^4.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
