--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,20 @@
             "address": "localhost",
             "localRoot": "${workspaceFolder}/server/",
             "remoteRoot": "/app/"
-          }
+          },
+          {
+            "type": "node",
+            "request": "launch",
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/server/node_modules/mocha/bin/mocha",
+            "args": [
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/server/test/setup_env.js",
+                "${workspaceFolder}/server/test"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        }
     ]
 }
