--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "better-npm-run test:integration"
-  },
-  "betterScripts": {
-    "test:integration": {
-      "command": "node node_modules/mocha/bin/mocha ",
-      "env": {
-        "NODE_ENV": "test",
-        "TEST_TOKEN": "test",
-        "POSTS_SHOWN_NOT_LOGGED_IN": "1"
-      }
-    }
+    "test": "node node_modules/mocha/bin/mocha --timeout 999999 --colors ./test/setup_env.js ./test"
   },
   "author": "",
   "license": "ISC",
@@ -26,10 +16,10 @@
     "express-mongo-sanitize": "^2.0.0",
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.13"
+    "mongoose": "^5.9.13",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
-    "better-npm-run": "^0.1.1",
     "chai": "^4.2.0",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
