--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "redux-logger": "^3.0.6",
     "redux-multi": "^0.1.12",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
