--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+# albums to migrate
+/migration_tool/album*
+
 # upload of files
 /server/upload/*
 /server/static/*
