--- a/migration_tool/package.json
+++ b/migration_tool/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "mongodb": "^3.0.0-rc0",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "sharp": "^0.25.2"
   }
 }
