--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM node:13.12.0-alpine
 WORKDIR /app
 
 COPY ./package.json ./
+RUN apk update && apk add graphicsmagick
 RUN yarn install
 COPY . .
 CMD ["npm", "run", "start"]
