--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -3,6 +3,7 @@ FROM node:13.12.0-alpine
 WORKDIR /app
 
 COPY ./package.json ./
+RUN apk update && apk add graphicsmagick
 RUN npm install
 RUN npm install nodemon -g
 COPY . ./
