--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.2.0",
